# snowflake-dbt-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
airbnb_pipeline/: dbt_project.yml
airbnb_pipeline/analyses/: conditional.sql  loop.sql
airbnb_pipeline/macros/: classify.sql  trimmer.sql
airbnb_pipeline/models/: sources.yml
airbnb_pipeline/models/bronze/: bronze_bookings.sql  bronze_hosts.sql  bronze_listings.sql
airbnb_pipeline/models/gold/: fact.sql  obt.sql
airbnb_pipeline/models/gold/ephemeral/: hosts.sql  listings.sql
airbnb_pipeline/models/silver/: silver_bookings.sql  silver_listings.sql
airbnb_pipeline/snapshots/: dim_bookings.yml  dim_hosts.yml  dim_listings.yml
dashboard/: AIRBNB_DASHBOARD.pbix
scripts/: copy_into_snowflake.py  snowflake_warehouse_setup.py  storage_integration.sql  upload_to_s3.py
src/utils/: __init__.py  s3_helpers.py
